--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,12 +6,12 @@
 #    By: atamas <atamas@student.42wolfsburg.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/28 00:13:51 by atamas            #+#    #+#              #
-#    Updated: 2025/04/28 00:18:08 by atamas           ###   ########.fr        #
+#    Updated: 2025/04/28 21:46:19 by atamas           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = realtype
-SRC = main.cpp
+SRC = main.cpp Base.cpp
 CXX = c++
 CXXFLAGS = -std=c++98 -Wall -Werror -Wextra
 OBJ = $(SRC:.cpp=.o)
